# aws-sage

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  aws_mcp.py  aws_mcp_legacy.py  docker-compose.yml  pyproject.toml  requirements.txt  run_aws_mcp.py  server.json  setup.py  test_mcp.py
docs/: ARTICLE-SUMMARY.md  COMPETITIVE-ANALYSIS.md  MARKETING_STRATEGY.md  pitch-email-venturebeat.md
docs/article/: AWS-SAGE-ARTICLE-NONTECHNICAL.md  AWS-SAGE-ARTICLE.md
src/aws_mcp/: config.py  server.py
src/aws_mcp/composition/: __init__.py  knowledge_proxy.py
src/aws_mcp/core/: __init__.py  context.py  environment.py  environment_manager.py  exceptions.py  multi_account.py  session.py
src/aws_mcp/differentiators/: __init__.py  compare.py  cost.py  dependencies.py  discovery.py  workflows.py
src/aws_mcp/execution/: __init__.py  engine.py  errors.py  pagination.py
src/aws_mcp/parser/: __init__.py  intent.py  schemas.py  service_models.py
src/aws_mcp/safety/: __init__.py  classifier.py  validator.py
src/aws_mcp/services/: __init__.py  base.py
src/aws_mcp/services/plugins/: __init__.py  compute.py  security.py  storage.py
src/aws_sage/: __init__.py  config.py  server.py
src/aws_sage/composition/: __init__.py  docs_proxy.py  knowledge_proxy.py
src/aws_sage/core/: __init__.py  context.py  environment_manager.py  multi_account.py  session.py
src/aws_sage/differentiators/: __init__.py  compare.py  cost.py  dependencies.py  discovery.py  workflows.py
src/aws_sage/execution/: __init__.py  engine.py  errors.py  pagination.py
src/aws_sage/parser/: __init__.py  intent.py  schemas.py  service_models.py
src/aws_sage/safety/: __init__.py  classifier.py  denylist.py  validator.py
src/aws_sage/services/: __init__.py  base.py
src/aws_sage/services/plugins/: __init__.py  compute.py  security.py  storage.py
src/aws_sage/tools/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cost.py  test_environment.py  test_execution.py  test_parser.py  test_safety.py
